Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14151

GSS context initialization fails on RHEL8.2 client

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • 3
    • 9223372036854775807

      When running Lustre client on RHEL8.2, Kerberos authentication can fail with the following message:

      LustreError: 323835:0:(gss_crypto.c:68:gss_keyblock_init()) failed to allocate tfm: cbc(aes), mode 0: rc = -2
      

      Problem stems from the fact that in RHEL8.2 (and Ubuntu 18.04 and possibly newer distros, as it depends on the kernel), the cbc(aes) crypto engine's type is now skcipher. In previous distros like RHEL7, type is blkcipher. This type has an impact on the primitive to call from Lustre in order to allocate an associated cipher handle.

            sebastien Sebastien Buisson
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: